EPBDS-11095 Improve performance in usage of OpenLClassLoader